--- a/index.html
+++ b/index.html
@@ -58,6 +58,45 @@
         </div>
     </section>
 
+    <!-- Specialists In (Brand Logos) -->
+    <section class="specialists-section"
+        style="padding: 40px 0; background-color: #f8f9fa; border-bottom: 1px solid #eee;">
+        <div class="container">
+            <h3
+                style="text-align: center; margin-bottom: 25px; color: #555; text-transform: uppercase; font-size: 1rem; letter-spacing: 1px;">
+                Specialists In</h3>
+            <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; opacity: 0.7;">
+                <!-- Brand Placeholders -->
+                <div class="brand-badge">TOYOTA</div>
+                <div class="brand-badge">SUBARU</div>
+                <div class="brand-badge">NISSAN</div>
+                <div class="brand-badge">MAZDA</div>
+                <div class="brand-badge">HONDA</div>
+                <div class="brand-badge">MERCEDES</div>
+                <div class="brand-badge">BMW</div>
+                <div class="brand-badge">LEXUS</div>
+            </div>
+        </div>
+        <style>
+            .brand-badge {
+                font-weight: 900;
+                font-size: 1.2rem;
+                color: #333;
+                border: 2px solid #ccc;
+                padding: 10px 20px;
+                border-radius: 5px;
+                cursor: default;
+                transition: 0.3s;
+            }
+
+            .brand-badge:hover {
+                border-color: var(--primary-blue);
+                color: var(--primary-blue);
+                opacity: 1;
+            }
+        </style>
+    </section>
+
     <!-- Services Preview -->
     <section class="services-preview" style="padding: var(--section-padding);">
         <div class="container">
