--- a/admin.html
+++ b/admin.html
@@ -12,6 +12,7 @@
 <body>
 
     <!-- App Container -->
+    <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
     <div class="app-container">
 
         <!-- Sidebar -->
@@ -20,47 +21,21 @@
                 <a href="index.html" class="sidebar-brand">
                     <span>⚡ DAVE AUTO ADMIN</span>
                 </a>
+                <!-- Close Button (Mobile) -->
+                <button onclick="toggleSidebar()"
+                    style="margin-left:auto; background:none; border:none; color:white; font-size:1.5rem; display:none; @media(max-width:992px){display:block;}">&times;</button>
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link active" data-target="dashboard">
-                        <span>Dashboard Overview</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-target="bookings">
-                        <span>Bookings</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-target="orders">
-                        <span>Orders & Payments</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-target="media">
-                        <span>Media Manager</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-target="products">
-                        <span>Products Inventory</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-target="reports">
-                        <span>Reports</span>
-                    </a>
-                </li>
+                <!-- Injected via JS -->
             </ul>
 
             <div class="sidebar-footer">
                 <a href="index.html" class="nav-link" style="color: #ff6b6b;">
                     <span>&larr; Back to Website</span>
                 </a>
-                <a href="index.html" class="nav-link" style="color: #ccc;">
-                    <span>Log Out</span>
+                <a href="#" class="nav-link" style="color: #ccc;">
+                    <span>Calculating...</span>
                 </a>
             </div>
         </aside>
@@ -70,10 +45,15 @@
 
             <!-- Top Header -->
             <header class="top-header">
-                <div class="header-search">
-                    <input type="text" placeholder="Search bookings, orders, customers...">
+                <div style="display:flex; align-items:center;">
+                    <button class="admin-toggle" onclick="toggleSidebar()">&#9776;</button>
+                    <div class="header-search">
+                        <input type="text" placeholder="Search...">
+                    </div>
                 </div>
                 <div class="header-actions">
+                    <a href="index.html" class="btn btn-sm bg-secondary"
+                        style="color:white; text-decoration:none; display:none; @media(max-width:992px){display:inline-flex;}">Site</a>
                     <div class="admin-profile">
                         <span style="font-size: 0.9rem; font-weight: 500;">Admin User</span>
                         <div class="avatar">A</div>
